--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,19 +1,20 @@
-## Requirements 
+Requirements 
   
- ### 1. Angular == ^10.0.0
+ 1. Angular == ^10.0.0
  Download & install nodejs from https://nodejs.org/en/download/
  
  After successful installation of nodejs == 14.15
  install Angular cli by typing this in terminal:
- ```
- npm install -g @angular/cli
- ```
- ### 2. Ionic == 6.13.1
- If nodejs is not already installed, refer above step 1st
  
+ npm install -g @angular/cli
+ 
+ 2. Ionic == 6.13.1
+ 
+ If nodejs is not already installed, refer above step 1st
  For installation of ionic framework, install the ionic cli globally by running this command:
- ```
+ 
  npm install -g @ionic/cli native-run cordova-res
- ```
- ### 3. VsCode == 16.8
+ 
+ 3. VsCode == 16.8
+ 
  Just a recommended development platform 
